@@ -1,3 +1,5 @@
+* Replace MissingFunction with properties
+
 Version 4.4.0 - 2017-05-01
 * Bug fixes (see mercurial logs for details)
 
